Projects and work section added

--- a/index.html
+++ b/index.html
@@ -153,6 +153,34 @@
 		</div><!-- container -->
 	</section><!-- about-section -->
 
+	<section class="education-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Projects</b></h3>
+						<h6 class="font-lite-black"><b>PERSONAL PROJECTS & WORK</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+					<div class="education-wrapper">
+						<div class="education margin-b-50">
+							<h4><b>Android Developer Certification</b></h4>
+							<h5 class="font-yellow"><b>Google Certified Associate Android Developer Certification</b></h5>
+							<h6 class="font-lite-black margin-t-10">JUN 2017</h6>
+						</div><!-- education -->
+						<div class="education margin-b-50">
+							<h4><b>IBM DB2 Certification</b></h4>
+							<h5 class="font-yellow"><b>Career Education Program of IBM</b></h5>
+							<h6 class="font-lite-black margin-t-10">DEC 2014</h6>
+						</div><!-- education -->
+					</div><!-- education-wrapper -->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+
+	</section>
+
 	<section class="counter-section" id="counter">
 		<div class="container">
 			<div class="row">
