--- a/index.html
+++ b/index.html
@@ -181,6 +181,45 @@
 
 	</section>
 
+	<section class="experience-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Work Experience</b></h3>
+						<h6 class="font-lite-black"><b>PREVIOUS JOBS</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+
+					<div class="experience margin-b-50">
+						<h4><b>SOFTWARE ENGINEER</b></h4>
+						<h5 class="font-yellow"><b>Mercedes Benz Research and Development
+								India, Bangalore</b></h5>
+						<h6 class="margin-t-10">AUG 2016 - PRESENT</h6>
+						<p class="font-semi-white margin-tb-30"></p>
+						<ul class="list margin-b-30">
+							<li>Android Projects</li>
+						</ul>
+					</div><!-- experience -->
+
+					<div class="experience margin-b-50">
+						<h4><b>Computer Engineering Internship</b></h4>
+						<h5 class="font-yellow"><b>Persistent Systems Private Limited,Pune</b></h5>
+						<h6 class="margin-t-10">JULY 2015 - MAY 2016</h6>
+						<p class="font-semi-white margin-tb-30"></p>
+						<ul class="list margin-b-30">
+							<li>ARKS-API - Content Based Search Add-on API Implemented for Hadoop Ecosystem</li>
+						</ul>
+					</div><!-- experience -->
+
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+
+	</section><!-- experience-section -->
+
+
 	<section class="counter-section" id="counter">
 		<div class="container">
 			<div class="row">
