Education section added

--- a/index.html
+++ b/index.html
@@ -219,6 +219,44 @@
 
 	</section><!-- experience-section -->
 
+	<section class="education-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Education & Courses</b></h3>
+						<h6 class="font-lite-black"><b>ACADEMIC CAREER</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+					<div class="education-wrapper">
+						<div class="education margin-b-50">
+							<h4><b>B.E. Computer Science</b></h4>
+							<h5 class="font-yellow"><b>Pimpri Chinchwad College of Engineering, Nigdi Pune</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN MAY 2016 (4 YEARS)</h6>
+							<p class="margin-tb-30">Studied Computer Science Engineering</p>
+						</div><!-- education -->
+
+						<div class="education margin-b-50">
+							<h4><b>H.S.C Science (12th Grade)</b></h4>
+							<h5 class="font-yellow"><b>Amrita Junior College</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUN 2010(2 YEARS)</h6>
+							<p class="margin-tb-30"></p>
+						</div><!-- education -->
+
+						<div class="education margin-b-50">
+							<h4><b>S.S.C. (10th Grade)</b></h4>
+							<h5 class="font-yellow"><b>C.M.S. English Medium High School</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUN 2010 (1 YEAR)</h6>
+							<p class="margin-tb-30"></p>
+						</div><!-- education -->
+					</div><!-- education-wrapper -->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+
+	</section><!-- about-section -->
+
 
 	<section class="counter-section" id="counter">
 		<div class="container">
