--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn" href="https://drive.google.com/file/d/1RmNfeHLtwxn1BWlHow3KfeE8hUyZzsk6/view?usp=sharing">Download CV</a>
 		</div><!-- container -->
 	</header>
 
