Added Recent Changes

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
 </head>
 
 <body>
-
-	<header>
+<header>
 		<div class="container">
 			<div class="heading-wrapper">
 				<div class="row">
+
 					<div class="col-sm-6 col-md-6 col-lg-4">
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
-								<h5>Nigdi Pradhikaran</h5>
-								<h5>Pune,India</h5>
+								<h5>Paderborn</h5>
+								<h5>Germany</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -51,10 +51,19 @@
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
+
+					<div class="col-sm-6 col-md-6 col-lg-4">
+						<div class="info">
+							<i class="icon ion-ios-chatboxes-outline"></i>
+							<div class="right-area">
+								<h6>Language</h6>
+								<h5><a href="#">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
+							</div><!-- right-area -->
+						</div><!-- info -->
+					</div><!-- col-sm-4 -->
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
-
-			<a class="downlad-btn" href="https://drive.google.com/file/d/1RmNfeHLtwxn1BWlHow3KfeE8hUyZzsk6/view?usp=sharing">Download CV</a>
+			<a class="downlad-btn-english" href="https://drive.google.com/file/d/1RmNfeHLtwxn1BWlHow3KfeE8hUyZzsk6/view?usp=sharing"></a>
 		</div><!-- container -->
 	</header>
 
@@ -93,83 +102,21 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<p class="margin-b-50">
-						Tech Enthusiast and Professional Android Developer.
+						I have 3 years of experience as a <B>Software Engineer</B> and I have contributed to several projects as a Professional Android Developer.
+						Comfortable in working with Java, Android, Kotlin, Python, Linux environments.
+						<BR><BR>
+						I am a team player and believe in exploring by pushing myself out of my comfort zone 
+						so as to solve complex problems.
+						<BR><BR>
 						Passionate in coding and linguistics. Always keen in developing solutions
 						and helping people which requires best of my technical and professional skills.
-						Firm believer of "Education is passport to the future, for tomorrow belongs 
-						to those who prepare for it today"
+						<BR><BR>
+						Interested in gaining knowledge related to Data Science, High Performace Computing and Software Engineering.
 					</p>
-
-					<div class="row">
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".90">
-									<div></div>
-									<h6 class="progress-title">Android</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".99">
-									<div></div>
-									<h6 class="progress-title">Java 7</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".67">
-									<div></div>
-									<h6 class="progress-title">Kotlin</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".80">
-									<div></div>
-									<h6 class="progress-title">Linux</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-					</div><!-- row -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
 	</section><!-- about-section -->
-
-	<section class="education-section section">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="heading">
-						<h3><b>Projects</b></h3>
-						<h6 class="font-lite-black"><b>PERSONAL PROJECTS & WORK</b></h6>
-					</div>
-				</div><!-- col-sm-4 -->
-				<div class="col-sm-8">
-					<div class="education-wrapper">
-						<div class="education margin-b-50">
-							<h4><b>Android Developer Certification</b></h4>
-							<h5 class="font-yellow"><b>Google Certified Associate Android Developer Certification</b></h5>
-							<h6 class="font-lite-black margin-t-10">JUN 2017</h6>
-						</div><!-- education -->
-						<div class="education margin-b-50">
-							<h4><b>IBM DB2 Certification</b></h4>
-							<h5 class="font-yellow"><b>Career Education Program of IBM</b></h5>
-							<h6 class="font-lite-black margin-t-10">DEC 2014</h6>
-						</div><!-- education -->
-					</div><!-- education-wrapper -->
-				</div><!-- col-sm-8 -->
-			</div><!-- row -->
-		</div><!-- container -->
-
-	</section>
 
 	<section class="experience-section section">
 		<div class="container">
@@ -184,22 +131,17 @@
 
 					<div class="experience margin-b-50">
 						<h4><b>SOFTWARE ENGINEER</b></h4>
-						<h5 class="font-yellow"><b>Mercedes Benz Research and Development
-								India, Bangalore</b></h5>
-						<h6 class="margin-t-10">AUG 2016 - PRESENT</h6>
+						<h5 class="font-yellow"><b>Mercedes Benz Research and Development India, Bangalore</b></h5>
+						<h6 class="margin-t-10">JUL 2016 - JUL 2019</h6>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
-							<li>Android Projects</li>
-						</ul>
-					</div><!-- experience -->
-
-					<div class="experience margin-b-50">
-						<h4><b>Computer Engineering Internship</b></h4>
-						<h5 class="font-yellow"><b>Persistent Systems Private Limited,Pune</b></h5>
-						<h6 class="margin-t-10">JULY 2015 - MAY 2016</h6>
-						<p class="font-semi-white margin-tb-30"></p>
-						<ul class="list margin-b-30">
-							<li>ARKS-API - Content Based Search Add-on API Implemented for Hadoop Ecosystem</li>
+							<li>Worked on RESTful API using Retrofit and OkHttp to perform optimized API consumption also using the reactive programming paradigm using reactive RxJava as well as concepts of handling the dependency management using Dagger.</li>
+							<li>Created a library-based dependency approach so as to include the new features into an already
+								matured codebase so as to achieve minimal changes.</li>
+							<li>Contributed majorly to the features having remote time consuming services just by using the App based API calls.</li>
+							<li>Worked on the high-speed insertion and fetching of database records in Sqlite database.</li>
+							<li>Worked on several proof of concepts for features like voice command recognition for screen navigation, integration of payment gateway and map navigation</li>
+							<li>Developed a framework for third party Analytics so as to understand the app usage so as to gain insights in app usage.</li>
 						</ul>
 					</div><!-- experience -->
 
@@ -214,32 +156,89 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
+						<h3><b>Certifications</b></h3>
+						<h6 class="font-lite-black"><b>Secondary Courses</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+					<div class="education-wrapper">
+
+						<div class="education margin-b-50">
+							<h4><b>Machine Learning Certification</b></h4>
+							<h5 class="font-yellow"><b>Coursera Machine Learning by Standford University</b></h5>
+							<h6 class="font-lite-black margin-t-10">JUN 2019</h6>
+						</div><!-- education -->
+
+						<div class="education margin-b-50">
+							<h4><b>Android Developer Certification</b></h4>
+							<h5 class="font-yellow"><b>Google Certified Associate Android Developer Certification</b></h5>
+							<h6 class="font-lite-black margin-t-10">JUN 2017</h6>
+						</div><!-- education -->
+
+						<div class="education margin-b-50">
+							<h4><b>IBM DB2 Certification</b></h4>
+							<h5 class="font-yellow"><b>Career Education Program of IBM</b></h5>
+							<h6 class="font-lite-black margin-t-10">DEC 2014</h6>
+						</div><!-- education -->
+
+					</div><!-- education-wrapper -->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section>
+
+	<section class="experience-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Languages</b></h3>
+						<h6 class="font-lite-black"><b>SPOKEN LANGUAGES</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+
+					<div class="experience margin-b-50">
+						<h4><b>ENGLISH 🇬🇧 </b></h4>
+						<h5 class="font-yellow"><b>Studied in English throughtout my life and achieved C 1 Level IELTS</b></h5>
+					</div><!-- experience -->
+
+					<div class="experience margin-b-30">
+						<h4><b>GERMAN 🇩🇪 </b></h4>
+						<h5 class="font-yellow"><b>Completed German as a Foreign Language Level B 1 . 1  at University of Paderborn as a Minor Subject.</b></h5>
+					</div><!-- experience -->
+
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- experience-section -->
+
+	<section class="education-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
 						<h3><b>Education & Courses</b></h3>
 						<h6 class="font-lite-black"><b>ACADEMIC CAREER</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="education-wrapper">
+
 						<div class="education margin-b-50">
-							<h4><b>B.E. Computer Science</b></h4>
-							<h5 class="font-yellow"><b>Pimpri Chinchwad College of Engineering, Nigdi Pune</b></h5>
-							<h6 class="font-lite-black margin-t-10">GRADUATED IN MAY 2016 (4 YEARS)</h6>
-							<p class="margin-tb-30">Studied Computer Science Engineering</p>
+							<h4><b>M.Sc Computer Science</b></h4>
+							<h5 class="font-yellow"><b>Universität Paderborn</b></h5>
+							<h6 class="font-lite-black margin-t-10">Currently Pursuing</h6>
+							<p class="margin-tb-30">Studying Computer Science</p>
 						</div><!-- education -->
 
 						<div class="education margin-b-50">
-							<h4><b>H.S.C Science (12th Grade)</b></h4>
-							<h5 class="font-yellow"><b>Amrita Junior College</b></h5>
-							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUN 2010(2 YEARS)</h6>
-							<p class="margin-tb-30"></p>
+							<h4><b>B.E. Computer Engineering</b></h4>
+							<h5 class="font-yellow"><b>University of Pune</b></h5>
+							<h6 class="font-lite-black margin-t-10">GRADUATED IN MAY 2012 - MAY 2016 </h6>
+							<p class="margin-tb-30">Studied Computer Engineering</p>
 						</div><!-- education -->
 
-						<div class="education margin-b-50">
-							<h4><b>S.S.C. (10th Grade)</b></h4>
-							<h5 class="font-yellow"><b>C.M.S. English Medium High School</b></h5>
-							<h6 class="font-lite-black margin-t-10">GRADUATED IN JUN 2010 (1 YEAR)</h6>
-							<p class="margin-tb-30"></p>
-						</div><!-- education -->
 					</div><!-- education-wrapper -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -247,42 +246,51 @@
 
 	</section><!-- about-section -->
 
-
-	<section class="counter-section" id="counter">
+	<section class="experience-section section">
 		<div class="container">
 			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Skills</b></h3>
+						<h6 class="font-lite-black"><b>TECHNOLOGIES, TOOLS AND PROGRAMMING LANGUAGES</b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
 
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="400" data-count="4">0</span></b></h1>
-						<h5 class="desc"><b>Coder Degrees</b></h5>
-					</div><!-- counter -->
-				</div><!-- col-md-3-->
+					<div class="experience margin-b-50">
+						<h4><b>PROGRAMMING LANGUAGES</b></h4>
+						<p class="font-semi-white margin-tb-30"></p>
+						<ul class="list margin-b-30">
+							<li>Python, Java, Android, Kotlin, C/C++, Bash Scripting, Octave</li>
+						</ul>
+					</div><!-- experience -->
 
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="1400" data-count="10">0</span></b></h1>
-						<h5 class="desc"><b>Project Completed</b></h5>
-					</div><!-- counter -->
-				</div><!-- col-md-3-->
+					<div class="experience margin-b-50">
+						<h4><b>LIBRARIES</b></h4>
+						<p class="font-semi-white margin-tb-30"></p>
+						<ul class="list margin-b-30">
+							<li>Android	: 	Retrofit, Dagger, RxJava, Sqlite, Google Analytics, Adobe Omniture</li>
+							<li>Python	: 	Numpy, Matplotlib, Pandas, Scikit-Learn</li>
+							<li>C/C++	: 	OpenMP, MPI</li>
+						</ul>
+					</div><!-- experience -->
 
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="700" data-count="6">0</span></b></h1>
-						<h5 class="desc"><b>Satisfied Clients</b></h5>
-					</div><!-- counter -->
-				</div><!-- col-md-3-->
+					<div class="experience margin-b-50">
+						<h4><b>TOOLS</b></h4>
+						<p class="font-semi-white margin-tb-30"></p>
+						<ul class="list margin-b-30">
+							<li>IDE 		: 	Eclipse, Android Studio, Jupyter, PyCharm, Visual Studio Code, VIM</li>
+							<li>VCS 		: 	GIT</li>
+							<li>Tools 		: 	Postman, Apache Tomcat</li>
+							<li>Databases 	: 	MySQL, Sqlite, IBM DB2 (Certified)</li>
+						</ul>
+					</div><!-- experience -->
 
-				<div class="col-sm-6 col-md-6 col-lg-3">
-					<div class="counter margin-b-30">
-						<h1 class="title"><b><span class="counter-value" data-duration="2000" data-count="15">0</span></b></h1>
-						<h5 class="desc"><b>Finished Projects</b></h5>
-					</div><!-- margin-b-30 -->
-				</div><!-- col-md-3-->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
 
-			</div><!-- row-->
-		</div><!-- container-->
-	</section><!-- counter-section-->
+	</section><!-- experience-section -->	
 
 	<footer>
 		<p class="copyright">
