Started German html page

--- a/index_de.html
+++ b/index_de.html
@@ -46,7 +46,7 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h6>Contact Me</h6>
+								<h6>Schreiben Sie mir</h6>
 								<h5>rahulraopune@gmail.com</h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
@@ -56,8 +56,8 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h6>Language</h6>
-								<h5><a href="#">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
+								<h6>Sprache ändern/h6>
+								<h5><a href="index.html">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -77,7 +77,7 @@
 						<h2><b>Rahul Rao</b></h2>
 						<h4 class="font-yellow">Software Engineer</h4>
 						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>June 06, 1994</li>
+							<li><b>BORN : </b>Juni 06, 1994</li>
 							<li><b>EMAIL : </b>rahulraopune@gmail.com</li>
 						</ul>
 						<ul class="social-icons">
@@ -97,7 +97,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>About me</b></h3>
-						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
+						<h6 class="font-lite-black"><b>PROFESSIONELLER KARRIEREWEG</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -123,7 +123,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Work Experience</b></h3>
+						<h3><b>Arbeitserfahrung</b></h3>
 						<h6 class="font-lite-black"><b>PREVIOUS JOBS</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
@@ -156,7 +156,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Certifications</b></h3>
+						<h3><b>Zertifikaten</b></h3>
 						<h6 class="font-lite-black"><b>Secondary Courses</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
@@ -176,7 +176,7 @@
 						</div><!-- education -->
 
 						<div class="education margin-b-50">
-							<h4><b>IBM DB2 Certification</b></h4>
+							<h4><b>IBM Java/J2EE/DB2 Certification</b></h4>
 							<h5 class="font-yellow"><b>Career Education Program of IBM</b></h5>
 							<h6 class="font-lite-black margin-t-10">DEC 2014</h6>
 						</div><!-- education -->
@@ -192,19 +192,19 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Languages</b></h3>
+						<h3><b>Sprache Kenntnisse</b></h3>
 						<h6 class="font-lite-black"><b>SPOKEN LANGUAGES</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 
 					<div class="experience margin-b-50">
-						<h4><b>ENGLISH 🇬🇧 </b></h4>
+						<h4><b>ENGLISCH 🇬🇧 </b></h4>
 						<h5 class="font-yellow"><b>Studied in English throughtout my life and achieved C 1 Level IELTS</b></h5>
 					</div><!-- experience -->
 
 					<div class="experience margin-b-30">
-						<h4><b>GERMAN 🇩🇪 </b></h4>
+						<h4><b>DEUTSCH 🇩🇪 </b></h4>
 						<h5 class="font-yellow"><b>Completed German as a Foreign Language Level B 1 . 1  at University of Paderborn as a Minor Subject.</b></h5>
 					</div><!-- experience -->
 
@@ -218,7 +218,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Education & Courses</b></h3>
+						<h3><b>Ausbildung und Kurse</b></h3>
 						<h6 class="font-lite-black"><b>ACADEMIC CAREER</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
@@ -252,13 +252,13 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Skills</b></h3>
-						<h6 class="font-lite-black"><b>TECHNOLOGIES, TOOLS AND PROGRAMMING LANGUAGES</b></h6>
+						<h6 class="font-lite-black"><b>TECHNOLOGIE, WERKZUEGE AND PROGRAMMIERSPRACHE</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 
 					<div class="experience margin-b-50">
-						<h4><b>PROGRAMMING LANGUAGES</b></h4>
+						<h4><b>PROGRAMMIERSPRACHE KENNTNISSE</b></h4>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
 							<li>Python, Java, Android, Kotlin, C/C++, Bash Scripting, Octave</li>
@@ -276,13 +276,13 @@
 					</div><!-- experience -->
 
 					<div class="experience margin-b-50">
-						<h4><b>TOOLS</b></h4>
+						<h4><b>WERKZUEGE</b></h4>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
 							<li>IDE 		: 	Eclipse, Android Studio, Jupyter, PyCharm, Visual Studio Code, VIM</li>
 							<li>VCS 		: 	GIT</li>
 							<li>Tools 		: 	Postman, Apache Tomcat</li>
-							<li>Databases 	: 	MySQL, Sqlite, IBM DB2 (Certified)</li>
+							<li>Datenbanken 	: 	MySQL, Sqlite, IBM DB2 (Certified)</li>
 						</ul>
 					</div><!-- experience -->
 
