--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h6>Language</h6>
-								<h5><a href="#">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
+								<h5><a href="index_de.html">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
-			<a class="downlad-btn-english" href="https://drive.google.com/file/d/1RmNfeHLtwxn1BWlHow3KfeE8hUyZzsk6/view?usp=sharing"></a>
+			<a class="downlad-btn-english" href="https://drive.google.com/file/d/1RmNfeHLtwxn1BWlHow3KfeE8hUyZzsk6/view?usp=sharing">DOWNLOAD CV</a>
 		</div><!-- container -->
 	</header>
 
