Started German html page

--- a/index_de.html
+++ b/index_de.html
@@ -56,7 +56,7 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h6>Sprache ändern/h6>
+								<h6>Sprache ändern</h6>
 								<h5><a href="index.html">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
