Added Translation Page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h6>Language</h6>
-								<h5><a href="index_de.html">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
+								<h5><a href="index_de.html">English 🇬🇧 > Deutsch 🇩🇪</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
