--- a/index_de.html
+++ b/index_de.html
@@ -77,7 +77,7 @@
 						<h2><b>Rahul Rao</b></h2>
 						<h4 class="font-yellow">Software Engineer</h4>
 						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>Juni 06, 1994</li>
+							<li><b>GEBOREN : </b>Juni 06, 1994</li>
 							<li><b>EMAIL : </b>rahulraopune@gmail.com</li>
 						</ul>
 						<ul class="social-icons">
@@ -96,22 +96,19 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>About me</b></h3>
+						<h3><b>Über mich</b></h3>
 						<h6 class="font-lite-black"><b>PROFESSIONELLER KARRIEREWEG</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<p class="margin-b-50">
-						I have 3 years of experience as a <B>Software Engineer</B> and I have contributed to several projects as a Professional Android Developer.
-						Comfortable in working with Java, Android, Kotlin, Python, Linux environments.
+						Ich habe 3 Jahre Erfahrung als Software Engineer und habe als professioneller Android-Entwickler an mehreren Projekten mitgewirkt. Bequem in der Arbeit mit Java-, Android-, Kotlin-, Python- und Linux-Umgebungen.
 						<BR><BR>
-						I am a team player and believe in exploring by pushing myself out of my comfort zone 
-						so as to solve complex problems.
+						Ich bin ein Teamplayer und glaube an das Erkunden, indem ich mich aus meiner Komfortzone herausdrücke, um komplexe Probleme zu lösen.
 						<BR><BR>
-						Passionate in coding and linguistics. Always keen in developing solutions
-						and helping people which requires best of my technical and professional skills.
+						Leidenschaft für Codierung und Linguistik. Immer daran interessiert, Lösungen zu entwickeln und Menschen zu helfen, die das Beste aus meinen technischen und beruflichen Fähigkeiten erfordern.
 						<BR><BR>
-						Interested in gaining knowledge related to Data Science, High Performace Computing and Software Engineering.
+						Interessiert an Kenntnissen in den Bereichen Data Science, High Performace Computing und Software Engineering.
 					</p>
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -135,13 +132,12 @@
 						<h6 class="margin-t-10">JUL 2016 - JUL 2019</h6>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
-							<li>Worked on RESTful API using Retrofit and OkHttp to perform optimized API consumption also using the reactive programming paradigm using reactive RxJava as well as concepts of handling the dependency management using Dagger.</li>
-							<li>Created a library-based dependency approach so as to include the new features into an already
-								matured codebase so as to achieve minimal changes.</li>
-							<li>Contributed majorly to the features having remote time consuming services just by using the App based API calls.</li>
-							<li>Worked on the high-speed insertion and fetching of database records in Sqlite database.</li>
-							<li>Worked on several proof of concepts for features like voice command recognition for screen navigation, integration of payment gateway and map navigation</li>
-							<li>Developed a framework for third party Analytics so as to understand the app usage so as to gain insights in app usage.</li>
+								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit reaktivem RxJava sowie mit Konzepten zur Behandlung des Abhängigkeitsmanagements mit Dagger. </ Li>
+								<li> Es wurde ein bibliotheksbasierter Abhängigkeitsansatz erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebasis, um minimale Änderungen zu erzielen. </li> </ul>
+								<li> Trug hauptsächlich durch die Verwendung der App-basierten API-Aufrufe zu den Funktionen mit zeitaufwändigen Remote-Diensten bei. </li>
+								<li> Arbeitete am schnellen Einfügen und Abrufen von Datenbankeinträgen in die SQLite-Datenbank. </li>
+								<li> Arbeitete an mehreren Proof-of-Konzepten für Funktionen wie Sprachbefehlserkennung für die Bildschirmnavigation, Integration des Payment gateways und Kartennavigation </li>
+								<li> Entwickelte ein Framework für Analytics von Drittanbietern, um die App-Nutzung zu verstehen und Einblicke in die App-Nutzung zu erhalten. </li>
 						</ul>
 					</div><!-- experience -->
 
@@ -200,12 +196,12 @@
 
 					<div class="experience margin-b-50">
 						<h4><b>ENGLISCH 🇬🇧 </b></h4>
-						<h5 class="font-yellow"><b>Studied in English throughtout my life and achieved C 1 Level IELTS</b></h5>
+						<h5 class="font-yellow"><b>Ich habe mein ganzes Leben auf Englisch studiert und C 1 Level IELTS erreicht.</b></h5>
 					</div><!-- experience -->
 
 					<div class="experience margin-b-30">
 						<h4><b>DEUTSCH 🇩🇪 </b></h4>
-						<h5 class="font-yellow"><b>Completed German as a Foreign Language Level B 1 . 1  at University of Paderborn as a Minor Subject.</b></h5>
+						<h5 class="font-yellow"><b>Deutsch als Fremdsprache abgeschlossen Niveau B 1. 1 an der Universität Paderborn als Nebenfach.</b></h5>
 					</div><!-- experience -->
 
 				</div><!-- col-sm-8 -->
@@ -219,7 +215,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Ausbildung und Kurse</b></h3>
-						<h6 class="font-lite-black"><b>ACADEMIC CAREER</b></h6>
+						<h6 class="font-lite-black"><b>AKADEMISCHE KARRIERE</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -251,7 +247,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Skills</b></h3>
+						<h3><b>Fähigkeiten</b></h3>
 						<h6 class="font-lite-black"><b>TECHNOLOGIE, WERKZUEGE AND PROGRAMMIERSPRACHE</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
@@ -282,7 +278,7 @@
 							<li>IDE 		: 	Eclipse, Android Studio, Jupyter, PyCharm, Visual Studio Code, VIM</li>
 							<li>VCS 		: 	GIT</li>
 							<li>Tools 		: 	Postman, Apache Tomcat</li>
-							<li>Datenbanken 	: 	MySQL, Sqlite, IBM DB2 (Certified)</li>
+							<li>Datenbanken : 	MySQL, Sqlite, IBM DB2 (Certified)</li>
 						</ul>
 					</div><!-- experience -->
 
