Added Translation Page Changes

--- a/index_de.html
+++ b/index_de.html
@@ -57,7 +57,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h6>Sprache ändern</h6>
-								<h5><a href="index.html">English 🇬🇧 | Deutsch 🇩🇪</a></h5>
+								<h5><a href="index.html">Deutsch 🇩🇪 > English 🇬🇧 </a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -121,7 +121,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Arbeitserfahrung</b></h3>
-						<h6 class="font-lite-black"><b>PREVIOUS JOBS</b></h6>
+						<h6 class="font-lite-black"><b>FRÜHERE JOBS</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -129,14 +129,14 @@
 					<div class="experience margin-b-50">
 						<h4><b>SOFTWARE ENGINEER</b></h4>
 						<h5 class="font-yellow"><b>Mercedes Benz Research and Development India, Bangalore</b></h5>
-						<h6 class="margin-t-10">JUL 2016 - JUL 2019</h6>
+						<h6 class="margin-t-10">JULI 2016 - JULI 2019</h6>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
-								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit reaktivem RxJava sowie mit Konzepten zur Behandlung des Abhängigkeitsmanagements mit Dagger. </ Li>
-								<li> Es wurde ein bibliotheksbasierter Abhängigkeitsansatz erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebasis, um minimale Änderungen zu erzielen. </li> </ul>
+								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit reaktivem RxJava sowie mit Konzepten zur Behandlung des Abhängigkeitsmanagements mit Dagger. </li>
+								<li> Es wurde ein bibliotheksbasierter Abhängigkeitsansatz erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebasis, um minimale Änderungen zu erzielen. </li>
 								<li> Trug hauptsächlich durch die Verwendung der App-basierten API-Aufrufe zu den Funktionen mit zeitaufwändigen Remote-Diensten bei. </li>
 								<li> Arbeitete am schnellen Einfügen und Abrufen von Datenbankeinträgen in die SQLite-Datenbank. </li>
-								<li> Arbeitete an mehreren Proof-of-Konzepten für Funktionen wie Sprachbefehlserkennung für die Bildschirmnavigation, Integration des Payment gateways und Kartennavigation </li>
+								<li> Arbeitete an mehreren Proof-of-Concept für Funktionen wie Sprachbefehlserkennung für die Bildschirmnavigation, Integration des Payment gateways und Kartennavigation </li>
 								<li> Entwickelte ein Framework für Analytics von Drittanbietern, um die App-Nutzung zu verstehen und Einblicke in die App-Nutzung zu erhalten. </li>
 						</ul>
 					</div><!-- experience -->
@@ -161,20 +161,20 @@
 
 						<div class="education margin-b-50">
 							<h4><b>Machine Learning Certification</b></h4>
-							<h5 class="font-yellow"><b>Coursera Machine Learning by Standford University</b></h5>
-							<h6 class="font-lite-black margin-t-10">JUN 2019</h6>
+							<h5 class="font-yellow"><b>Coursera Machine Learning OnlineKurs an der Standford Universität.</b></h5>
+							<h6 class="font-lite-black margin-t-10">JUNI 2019</h6>
 						</div><!-- education -->
 
 						<div class="education margin-b-50">
 							<h4><b>Android Developer Certification</b></h4>
 							<h5 class="font-yellow"><b>Google Certified Associate Android Developer Certification</b></h5>
-							<h6 class="font-lite-black margin-t-10">JUN 2017</h6>
+							<h6 class="font-lite-black margin-t-10">JUNI 2017</h6>
 						</div><!-- education -->
 
 						<div class="education margin-b-50">
 							<h4><b>IBM Java/J2EE/DB2 Certification</b></h4>
-							<h5 class="font-yellow"><b>Career Education Program of IBM</b></h5>
-							<h6 class="font-lite-black margin-t-10">DEC 2014</h6>
+							<h5 class="font-yellow"><b>Career Education Program bei IBM</b></h5>
+							<h6 class="font-lite-black margin-t-10">DEZ 2014</h6>
 						</div><!-- education -->
 
 					</div><!-- education-wrapper -->
@@ -278,7 +278,7 @@
 							<li>IDE 		: 	Eclipse, Android Studio, Jupyter, PyCharm, Visual Studio Code, VIM</li>
 							<li>VCS 		: 	GIT</li>
 							<li>Tools 		: 	Postman, Apache Tomcat</li>
-							<li>Datenbanken : 	MySQL, Sqlite, IBM DB2 (Certified)</li>
+							<li>Datenbanken : 	MySQL, Sqlite, IBM DB2</li>
 						</ul>
 					</div><!-- experience -->
 
