Added Hyper link for email

--- a/index_de.html
+++ b/index_de.html
@@ -46,8 +46,8 @@
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
-								<h6>Schreiben Sie mir</h6>
-								<h5>rahulraopune@gmail.com</h5>
+								<h6>Schreiben Sie mich an</h6>
+								<h5><a href="mailto:rahulraopune@gmail.com">rahulraopune@gmail.com</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -102,13 +102,13 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<p class="margin-b-50">
-						Ich habe 3 Jahre Erfahrung als Software Engineer und habe als professioneller Android-Entwickler an mehreren Projekten mitgewirkt. Bequem in der Arbeit mit Java-, Android-, Kotlin-, Python- und Linux-Umgebungen.
+						Ich habe 3 Jahre Erfahrung als Software Engineer und habe als professioneller Android-Entwickler an mehreren Projekten mitgewirkt. Bequem in der Arbeit mit Java, Android, Kotlin, Python und Linux-Umgebungen.
 						<BR><BR>
-						Ich bin ein Teamplayer und glaube an das Erkunden, indem ich mich aus meiner Komfortzone herausdrücke, um komplexe Probleme zu lösen.
+						Ich bin immer ein Teamplayer und glaube ans Entdecken, in dem ich mich aus meiner Komfortzone herausdrücke, um komplexe Probleme zu lösen.
 						<BR><BR>
-						Leidenschaft für Codierung und Linguistik. Immer daran interessiert, Lösungen zu entwickeln und Menschen zu helfen, die das Beste aus meinen technischen und beruflichen Fähigkeiten erfordern.
+						Leidenschaft für Coding und Linguistik. Immer daran interessiert, Lösungen zu entwickeln und Menschen zu helfen, die das Beste aus meinen technischen und beruflichen Fähigkeiten erfordern.
 						<BR><BR>
-						Interessiert an Kenntnissen in den Bereichen Data Science, High Performace Computing und Software Engineering.
+						Ich interessiere dafür, dass die Kenntnissen in den Bereichen Data Science, High Performace Computing und Software Engineering verbessern.
 					</p>
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
@@ -134,10 +134,10 @@
 						<ul class="list margin-b-30">
 								<li> Arbeitete an der RESTful-API mit Retrofit und OkHttp, um einen optimierten API-Verbrauch zu erzielen, auch unter Verwendung des reaktiven Programmierparadigmas mit reaktivem RxJava sowie mit Konzepten zur Behandlung des Abhängigkeitsmanagements mit Dagger. </li>
 								<li> Es wurde ein bibliotheksbasierter Abhängigkeitsansatz erstellt, um die neuen Funktionen in eine bereits vorhandene zu integrieren ausgereifte Codebasis, um minimale Änderungen zu erzielen. </li>
-								<li> Trug hauptsächlich durch die Verwendung der App-basierten API-Aufrufe zu den Funktionen mit zeitaufwändigen Remote-Diensten bei. </li>
+								<li> Trug hauptsächlich durch die Verwendung der App-basierten API Calls zu den Funktionen mit zeitaufwändigen Remote-Diensten bei. </li>
 								<li> Arbeitete am schnellen Einfügen und Abrufen von Datenbankeinträgen in die SQLite-Datenbank. </li>
 								<li> Arbeitete an mehreren Proof-of-Concept für Funktionen wie Sprachbefehlserkennung für die Bildschirmnavigation, Integration des Payment gateways und Kartennavigation </li>
-								<li> Entwickelte ein Framework für Analytics von Drittanbietern, um die App-Nutzung zu verstehen und Einblicke in die App-Nutzung zu erhalten. </li>
+								<li> Entwickelte ein Framework für Analytics von Third Party, um die App-Nutzung zu verstehen und Einblicke in die App-Nutzung zu erhalten. </li>
 						</ul>
 					</div><!-- experience -->
 
@@ -189,7 +189,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Sprache Kenntnisse</b></h3>
-						<h6 class="font-lite-black"><b>SPOKEN LANGUAGES</b></h6>
+						<h6 class="font-lite-black"><b>GESPROCHENE SPRACHEN</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -201,7 +201,7 @@
 
 					<div class="experience margin-b-30">
 						<h4><b>DEUTSCH 🇩🇪 </b></h4>
-						<h5 class="font-yellow"><b>Deutsch als Fremdsprache abgeschlossen Niveau B 1. 1 an der Universität Paderborn als Nebenfach.</b></h5>
+						<h5 class="font-yellow"><b>Deutsch als Fremdsprache Niveau B 1. 1 als Nebenfach abgeschlossen an der Universität Paderborn.</b></h5>
 					</div><!-- experience -->
 
 				</div><!-- col-sm-8 -->
