--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h6>Contact Me</h6>
-								<h5>rahulraopune@gmail.com</h5>
+								<h5><a href="mailto:rahulraopune@gmail.com">rahulraopune@gmail.com</a></h5>
 							</div><!-- right-area -->
 						</div><!-- info -->
 					</div><!-- col-sm-4 -->
@@ -108,7 +108,7 @@
 						I am a team player and believe in exploring by pushing myself out of my comfort zone 
 						so as to solve complex problems.
 						<BR><BR>
-						Passionate in coding and linguistics. Always keen in developing solutions
+						Passionate for coding and linguistics. Always keen in developing solutions
 						and helping people which requires best of my technical and professional skills.
 						<BR><BR>
 						Interested in gaining knowledge related to Data Science, High Performace Computing and Software Engineering.
