Made Translation Changes

--- a/index_de.html
+++ b/index_de.html
@@ -214,7 +214,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>Ausbildung und Kurse</b></h3>
+						<h3><b>Studium</b></h3>
 						<h6 class="font-lite-black"><b>AKADEMISCHE KARRIERE</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
@@ -248,7 +248,7 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Fähigkeiten</b></h3>
-						<h6 class="font-lite-black"><b>TECHNOLOGIE, WERKZUEGE AND PROGRAMMIERSPRACHE</b></h6>
+						<h6 class="font-lite-black"><b>TECHNOLOGIE, TOOLS UND PROGRAMMIERSPRACHE</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -272,7 +272,7 @@
 					</div><!-- experience -->
 
 					<div class="experience margin-b-50">
-						<h4><b>WERKZUEGE</b></h4>
+						<h4><b>Tools</b></h4>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
 							<li>IDE 		: 	Eclipse, Android Studio, Jupyter, PyCharm, Visual Studio Code, VIM</li>
